購物車頁面設計 	1.完成設計購物車的展示部分頁面 		1. 在Views/Shared/中加入檢視 		2.加入部分檢視_CartPartial 		3.做一個DropDownMenu(使用BootStrap的DropDown) 		4.開啟Share中的_Layout.cshtml，我們在首頁上方的菜單加入一組li，其中使用Html.Partial將剛剛完成的CartPartial 引入，這邊也可以注意到其實登入(Login)的設計也是部分檢視 	2.實裝購物車頁面 		1. 首先到購物車類別 Models/Cart.cs加工一下，第一個是類別實作IEnumerable介面，然後我們將原本的cartItems從public改為private把購物車封裝起來，不讓外部的類別可以輕易地直接存取購物車中真正的商品列表。 然後再新增一個屬性Count可以計算目前商品總數。 		2.新增AddProduct()，直接使用商品編號的方式將商品加入購物車中 		3.新增AddProduct()的方法，把Product轉成CartItem 		4.到_CartPartial.cshtml頁面，主要修改內容為取得目前購物車，將總金額改為由購物車取得，以及將購物車中每筆商品都顯示出來 		5.新增一個CartController，這是為了讓前台頁面可以輕鬆透過HttpGet取得目前購物車的頁面，新增取得當前購物車內容的GetCart()方法 與 新增一筆商品進購物車的AddToCart()方法，內部都是呼叫Cart的操作來完成。 		6.修改TestController 	3.使用Ajax將商品加入購物車 		1.開啟Layout頁面[View/Share/_Layout.cshtml]，在HTML的head區段中新增一段JavaScript(行14~34)，主要為AddToCart()方法，此方法將傳入的productid丟給CartController中的AddToCart()方法，並且將回傳的購物車頁面更新至id為Cart的li元素裡 		2.開啟[View/Home/Index]，將原本的加入購物車連接改為點選時，執行JavaScript中的AddToCart()方法，並且將目前的商品編號傳入 		3.開啟[View/Share/_CartPartial.cshtml]，新增一段判斷，如果目前購物車內商品數量大於零才顯示商品資訊，否則顯示 購物車內無任何商品 的提示。 	4.使用Ajax刪除購物車商品 		1.Cart類別新增RemoveProduct()方法，如果ProductId有存在購物車則移除，若不存在則不做任何動作。 		2.CartController新增RemoveFromCart() 呼叫Cart類別的RemoveProduct()方法 		3.在[Views/Shared/_Layout]中新增JavaScript中的RemoveFromCart()方法，呼叫CartController的RemoveProduct() Action 		4.在[Views/Shared/_CartPartial.cshtml]購物車頁面中新增刪除商品的按鈕，並且呼叫JavaScript的RemoveProduct() 	5.使用Ajax清空購物車 		1.Cart類別新增ClearCart() 		2.CartController 新增ClearCart() Action ， 呼叫Cart類別的ClearCart()方法 		3.在[Views/Shared/_Layout]中新增JavaScript中的ClearCart()方法，呼叫CartController 的ClearCart() Action 		4.在[Views/Shared/_CartPartial.cshtml]購物車頁面中新增刪除商品的按鈕，並且呼叫JavaScript的ClearCart()
	6.購物流程
		1. 瀏覽商品，並將喜愛的商品加入購物車
			之前就做好了
		2. 確定購物車完成，進入結帳
 			1.新增[Models/OrderModel/Ship.cs]的模型類別，此類別主要為定義商品的寄送資訊．其中包含三個欄位，RecieverName, RecieverPhone, RecieverAdress
			2.新增OrderController，包含Index()方法，此方法主要是顯示目前使用者的購物車內容，等待輸入好運送資訊後，即可以進入訂單資料庫．
			3.加入檢視Index.cshtml，資料模型使用我們步驟1的Ship模型，此頁面主要為顯示購物車內所有商品讓使用者確認用，顯示Ship模型，讓使用者可以填入 寄送資訊
			4.

--- a/ShoppingWeb/Views/Shared/_CartPartial.cshtml
+++ b/ShoppingWeb/Views/Shared/_CartPartial.cshtml
@@ -1,5 +1,4 @@
-﻿
-@{
+﻿@{
     //取得當前購物內容
     var CurrentCart = ShoppingWeb.Models.Operation.GetCurrentCart();
 }
@@ -9,7 +8,7 @@
     <span class="caret"></span>
 </a>
 
-<ul class="dropdown-menu" role="menu" aria-labelledby="CartDropDown">
+<ul class="dropdown-menu" role="menu"  aria-labelledby="CartDropDown">
 
 
     @if (CurrentCart.Count > 0)
@@ -21,24 +20,36 @@
                 <li><a>可愛ａ橡皮擦<span>200元 x 1</span></a></li>
                 <li><a>可愛ａ屎<span>50元 x 2</span></a></li>*/
 
-            <li class="col-xs-12">
-            <span class="col-xs-10">@cartitem.Name @cartitem.Price 元 X @cartitem.Quantity</span>
-                 <span class="btn btn-danger col-xs-2" onclick="RemoveFromCart('@cartitem.Id')">
-                X
-                 </span>
+            /*
+            <li class="dropdown dropdown-submenu">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">@cartitem.Name @cartitem.Price 元 X @cartitem.Quantity</a>
+                <ul class="dropdown-menu">
+                    <li><a href="#" onclick="RemoveFromCart('@cartitem.Id')">移除</a></li>
+                </ul>
             </li>
-        //<li><a>@cartitem.Name<span>@cartitem.Price X @cartitem.Quantity</span></a></li>
-        
+            */
+
+
+            <li class="col-xs-12"></li>
+                 <li><span class="col-xs-10">@cartitem.Name @cartitem.Price 元 X @cartitem.Quantity</span></li>
+                 <li><span class="btn btn-danger col-xs-2" onclick="RemoveFromCart('@cartitem.Id')">X</span></li>
+             
+            //<li><a>@cartitem.Name<span>@cartitem.Price X @cartitem.Quantity</span></a></li>
+
         }
-        
-    <li class="divider"></li>
-    <li><a class="btn btn-default text-center" href="#">結帳囉</a></li>
+
+        <li class="divider"></li>
+        <li><a class="btn btn-success text-center col-xs-5" href="@Url.Action("Index", "Order", new { })">結帳囉</a></li>
+        <li><a class="btn btn-danger text-center col-xs-5" onclick="ClearCart()">清空</a></li>
     }
     else
     {
         <li><a class="btn btn-default text-center" href="#">購物車內無商品</a></li>
     }
-   
 
-     
+
+
 </ul>
+
+
+
