--- a/ShoppingWeb/Views/Shared/_LoginPartial.cshtml
+++ b/ShoppingWeb/Views/Shared/_LoginPartial.cshtml
@@ -9,6 +9,7 @@
         <li>
             @Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
         </li>
+        <li>@Html.ActionLink("我的訂單", "MyOrder", "Order", routeValues: null, htmlAttributes: new { title = "Order"})</li>
         <li><a href="javascript:document.getElementById('logoutForm').submit()">登出</a></li>
     </ul>
     }
