--- a/ShoppingWeb/Views/Account/Register.cshtml
+++ b/ShoppingWeb/Views/Account/Register.cshtml
@@ -14,9 +14,9 @@
 
     
     <div class="form-group">
-        @Html.LabelFor(m => m.Name, new { @class = "col-md-2 control-label" })
+        @Html.LabelFor(m => m.UserName, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Name, new { @class = "form-control" })
+            @Html.TextBoxFor(m => m.UserName, new { @class = "form-control" })
         </div>
     </div>
 
