--- a/ShoppingWeb/Views/Home/Index.cshtml
+++ b/ShoppingWeb/Views/Home/Index.cshtml
@@ -16,7 +16,13 @@
 <div class="jumbotron">
     <h2>新兵入伍生活用品店 - 什麼都要買，什麼都用不到</h2>
     <h6><span></span> @Html.ActionLink("關於網站", "About", new { }, new { @class = "btn btn-primary btn-lg" })</h6>
+@if (ViewBag.ResultMessage != null)
+{
+    @Html.Label("info", (string)ViewBag.ResultMessage, new { @class = "text-info" })
+}
+
 </div>
+
 
 <div class="row">
     @foreach (var Product in this.Model)
@@ -31,7 +37,7 @@
                     <p>庫存：@Product.Quantity</p>
                     <p>
                         <a onclick="AddToCart('@Product.Id')" href="javascript:void{0};" class="btn btn-primary" role="button" >加入購物車</a>
-                        <a href="javascript:void{0};" class="btn btn-default" role="button">詳細資訊</a>
+                        <a href="@Url.Action("Detail", new { id = Product.Id })" class="btn btn-default" role="button">詳細資訊</a>
                     </p>
                 </div>
             </div>
