關於我的圖片掛了，重新上傳

--- a/ShoppingWeb/Views/Home/About.cshtml
+++ b/ShoppingWeb/Views/Home/About.cshtml
@@ -8,7 +8,7 @@
     <div class="row">
         <div class="[ col-sm-6 col-md-offset-2 col-md-4 ]">
             <div class="[ info-card ]">
-                <img style="width: 100%" src="https://scontent.ftpe4-2.fna.fbcdn.net/v/t1.0-9/11012970_1084810754869718_1008812084774530123_n.jpg?oh=02029c1049f6c14afff5f206c438f31b&oe=5962A1E6" />
+                <img style="width: 100%" src="https://scontent.ftpe7-3.fna.fbcdn.net/v/t1.0-9/11012970_1084810754869718_1008812084774530123_n.jpg?_nc_cat=108&oh=65403fac8033fe5ceaa5ec3a42cc023a&oe=5C5218E6" />
                 <div class="[ info-card-details ] animate">
                     <div class="[ info-card-header ]">
                         <h1> 郭駿佑 </h1>
